--- a/src/Easanles/AtletismoBundle/Resources/views/Intento/form_intento.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Intento/form_intento.html.twig
@@ -34,7 +34,7 @@
                       {% endif %}
                       {{ form_errors(form.intentos.vars.prototype.marca) }}
                    </td>
-                   <td>{{ form_widget(form.intentos.vars.prototype.validez) }}{{ form_errors(form.intentos.vars.prototype.validez) }}</td>
+                   <td><div onClick="checkIntentos()">{{ form_widget(form.intentos.vars.prototype.validez) }}</div>{{ form_errors(form.intentos.vars.prototype.validez) }}</td>
                    <td>{{ form_widget(form.intentos.vars.prototype.premios) }}{{ form_errors(form.intentos.vars.prototype.premios) }}</td>
                    <td><button type="button" class="btn btn-sm btn-danger" onClick="removeFormRow(this)"><span class="glyphicon glyphicon-remove" aria-label="Eliminar"></span></button></td>
                 </tr>
