--- a/src/Easanles/AtletismoBundle/Resources/views/Competicion/ver_competicion.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Competicion/ver_competicion.html.twig
@@ -6,8 +6,21 @@
 {% block navbar %}
       <li><a href="{{ path('listado_atletas') }}">Atletas</a></li>
       <li class="active"><a href="{{ path('listado_competiciones') }}">Competiciones</a></li>
-      <li><a class="inactive">Records</a></li>
-      <li><a class="inactive">Informes</a></li>
+      <li class="dropdown">
+         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Records <span class="caret"></span></a>
+         <ul class="dropdown-menu">
+            <li><a class="inactive" href="#">Records masculinos</a></li>
+            <li><a class="inactive" href="#">Records femeninos</a></li>
+         </ul>
+      </li>
+      <li class="dropdown">
+         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Informes <span class="caret"></span></a>
+         <ul class="dropdown-menu">
+            <li><a href="{{ path('pantalla_resultados') }}">Resultados</a></li>
+            <li><a class="inactive" href="#">Asistencia a eventos</a></li>
+            <li><a class="inactive" href="#">Pagos</a></li>
+         </ul>
+      </li>
       <li><a href="{{ path('configuracion') }}">Configuración</a></li>
 {% endblock %}
 
@@ -53,7 +66,7 @@
          {% elseif com.esoficial is same as(true) %}
          <p class="text-center text-info bg-info"><strong>COMPETICIÓN OFICIAL DEL CLUB</strong></p>
          {% endif %}
-         <p><a type="button" class="btn btn-lg btn-default center-block" href=""><span class="glyphicon glyphicon-list"></span> Resultados</a></p>
+         <p><a type="button" class="btn btn-lg btn-default center-block" href="{{ path('pantalla_resultados', {'com': com.sid}) }}"><span class="glyphicon glyphicon-list"></span> Resultados</a></p>
          <a type="button" class="btn btn-m btn-default hidden-xs" href="javascript:history.back()"><span class="glyphicon glyphicon-menu-left"></span> Volver</a>
          <a type="button" class="btn btn-m btn-default" href="{{ path('editar_competicion', {'id': com.sid}) }}"><span class="glyphicon glyphicon-edit"></span> Editar</a>
          <a type="button" class="btn btn-m btn-{% if com.pruebas.toArray()|length == 0 %}warning{% else %}default{% endif %}" href="{{ path('listado_pruebas', {'sidCom': com.sid}) }}"><span class="glyphicon glyphicon-list-alt"></span> Lista de pruebas <span class="badge">{{ com.pruebas.toArray()|length }}</span></a>
