--- a/src/Easanles/AtletismoBundle/Resources/views/Informes/pant_resultados.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Informes/pant_resultados.html.twig
@@ -2,7 +2,7 @@
 {% extends 'EasanlesAtletismoBundle:Default:index.html.twig' %}
 
 {% block title %}
-   Registrar marcas
+   Resultados
 {% endblock %}
 
 {% block css %}
@@ -20,10 +20,10 @@
             <li><a class="inactive" href="#">Records femeninos</a></li>
          </ul>
       </li>
-      <li class="dropdown">
+      <li class="dropdown active">
          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Informes <span class="caret"></span></a>
          <ul class="dropdown-menu">
-            <li><a href="{{ path('pantalla_resultados') }}">Resultados</a></li>
+            <li><a class="active" href="#">Resultados</a></li>
             <li><a class="inactive" href="#">Asistencia a eventos</a></li>
             <li><a class="inactive" href="#">Pagos</a></li>
          </ul>
@@ -33,7 +33,8 @@
 
 {% block breadcrumb %}
   <li><a href="{{ path('homepage') }}">Portada Admin</a></li>
-  <li class="active">Registrar marcas</li>
+  <li>Informes</li>
+  <li class="active">Resultados</li>
 {% endblock %}
 
    {% block modallabel %}<div id="dialog-label"></div>{% endblock %}
@@ -41,75 +42,83 @@
    {% block modalprimary %}<span id="dialog-btn"></span>{% endblock %}
 
 {% block container %}
-   <h1 id="container_title" class="row page-header">Registrar marcas</h1>
+   <h1 id="container_title" class="row page-header">Resultados</h1>
 
    {% if exception is defined %}
    <div class="alert alert-danger alert-dismissible fade in" role="alert"> <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button> <strong>Error: </strong><span>{{ exception }}</span></div>
    {% endif %}
-      
+   
    <div class="row">
-      <div class="col-xs-12 col-sm-5">
+      <div class="col-xs-12 col-sm-4">
          <div class="form-group">
-            <label for="select-com">Competiciones temporada {{ currentTemp }}/{{ (currentTemp + 1)|slice(2, 2) }}</label>
-            <select id="select-com" class="form-control" onChange="loadPru(this.value)">
-               <option value=""></option>
-               {% for com in coms %}
-                  <option value="{{ com.sid }}"{% if selCom is defined %}{% if selCom == com.sid%} selected{% endif %}{% endif %}>{{ com.nombre }}</option>
+            <select id="select-temp" class="form-control" onChange="">
+               {% for row in temps %}
+               <option value="{{ row.temp }}" {% if selTemp is defined %}{% if selTemp == row.temp %}selected{% endif %}{% endif %}>Temporada {{ row.temp }}/{{ (row.temp + 1)|slice(2, 2)}}</option>
                {% endfor %}
             </select>
          </div>
-      </div>
-      <div class="col-xs-8 col-sm-5">
          <div class="form-group">
-            <label for="select-pru">Pruebas</label>
-            <select id="select-pru" class="form-control" onChange="showCats(this.value)" disabled>
-               <option value=""></option>
+            <label for="select-com">Competición</label>
+            <select id="select-com" class="form-control" onChange="">
+            {% if selTemp is defined %}
+               {% for com in coms[selTemp]['coms'] %}
+                  <option value="{{ com.sid }}" {% if selCom is defined %}{% if selCom.sid == com.sid %}selected{% endif %}{% endif %}>{{ com.nombre }}</option>
+               {% endfor %}
+            {% endif %}
             </select>
          </div>
       </div>
-      <div class="col-xs-4 col-sm-2">
-         <div class="form-group">
-            <label for="select-cat">Categorías</label>
-            <select id="select-cat" class="form-control" onChange="loadAtls(this.value)" disabled>
-               <option value=""></option>
-            </select>
+      <div class="col-xs-12 col-sm-8">
+         <div class="row">
+            <div class="form-group col-xs-8">
+               <label for="select-pru">Prueba</label>
+               <select id="select-pru" class="form-control" onChange="">
+               </select>
+            </div>
+            <div class="form-group col-xs-4">
+               <label for="select-cat">Categoría</label>
+               <select id="select-cat" class="form-control" onChange="">
+               </select>
+            </div>
          </div>
       </div>
    </div>
    <div class="row">
-      <div class="col-xs-12 col-sm-5">
-         <label>Atletas inscritos</label>
+      <div class="col-xs-12 col-sm-4">
+         <div class="hidden-xs">
+            {% if selCom is defined %}
+            <a id="pic-link"href="{{ vich_uploader_asset(selCom, 'cartelFile') }}"><img id="pic-img" src="{{ vich_uploader_asset(selCom, 'cartelFile') }}" alt="{{ selCom.nombre }}" class="img-responsive thumbnail"/></a>
+            {% else %}
+            <a id="pic-link" href=""><img id="pic-img" src="" alt="" class="img-responsive thumbnail"/></a>
+            {% endif %}
+         </div>
+      </div>
+      <div class="col-xs-12 col-sm-8">
          <table class="table table-hover table-bordered table-condensed table-striped table-responsive">
-            <tbody id="select-atl">
+            <tbody>
                <tr>
-                  <th>Nombre</th><th>Selec.</th>
+                  <th>TEST</th>
                </tr>
             </tbody>
          </table>
       </div>
-      <div class="col-xs-12 col-sm-7">
-         <label>Rondas</label>
-         <table class="table table-hover table-bordered table-condensed table-striped table-responsive">
-            <tbody id="select-ron">
-            </tbody>
-         </table>
-      </div>
-   </div>
-   
+   </div>   
 {% endblock %}
 
-{% block js %}
-   <script src="{{ asset('bundles/atletismo/js/marcas.js') }}"></script>
-   {% if selPru is defined %}<script type="text/javascript">
-      var autoSelectPru = {{ selPru }}
-      {% if selAtl is defined %}
-         var autoSelectAtl = {{ selAtl }}
-      {% endif %}
-   </script>{% endif %}
-   
+{% block js %} 
+   <script type="text/javascript">
+      var comData = [];
+      {% for temp in coms %}
+         coms = [];
+         {% for com in temp.coms %}
+            coms['sidCom'] = {{ com.sid }};
+            coms['nombre'] = "{{ com.nombre }}";
+         {% endfor %}
+         comData[{{ temp.temp }}] = coms;
+      {% endfor %} 
+   </script>
    <script src="{{ asset('bundles/atletismo/js/modals.js') }}"></script>
    <script src="{{ asset('bundles/atletismo/js/scripts.js') }}"></script>
-
 {% endblock %}
 
 
