--- a/src/Easanles/AtletismoBundle/Resources/views/Intento/sel_ronda.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Intento/sel_ronda.html.twig
@@ -13,6 +13,6 @@
                      {% elseif ron.unidades == "puntosasc" %}{{ ron.marca|number_format(0, ',', '.') }} ptos.
                      {% endif %}
                   {% endif %}
-                  <td><button class="btn btn-xs btn-block btn-default" onClick="showModal('newINT', {{ ron.sid }}, {{ selAtl }}, null)"><span class="glyphicon glyphicon-dashboard"></span></button></td>
+                  <td><button class="btn btn-xs btn-block btn-default" onClick="showModal('newINT', {{ ron.sid }}, {{ selAtl }}, {% if ron.unidades == "segundos" %}false{% else %}true{% endif %})"><span class="glyphicon glyphicon-dashboard"></span></button></td>
                </tr>
                {% endfor %}
