--- a/src/Easanles/AtletismoBundle/Resources/views/Intento/sel_ronda.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Intento/sel_ronda.html.twig
@@ -1,5 +1,5 @@
                <tr>
-                  <th>Id</th><th>#</th><th>Nombre</th><th>Marca</th><th>Registrar</th>
+                  <th>Id</th><th><abbr title="Número de ronda">Nº</abbr></th><th>Nombre</th><th>Marca</th><th>Registrar</th>
                </tr>
                {% for ron in rondas %}
                <tr>
@@ -8,7 +8,7 @@
                   <td>{{ ron.nombre }}</td>
                   <td>{% if ron.marca is not null %}
                      {% if ron.unidades == "segundos" %}
-                        {{ (ron.marca / 3600)|round(0, "floor") }}{% set resto = ron.marca % 3600 %}:{{ "%02d"|format((resto / 60)|round(0, "floor")) }}{% set resto = ron.marca % 60 %}:{{ "%06.3f"|format(resto) }}
+                        {{ (ron.marca / 3600)|round(0, "floor") }}{% set resto = ron.marca - ((ron.marca / 3600)|round(0, "floor") * 3600) %}:{{ "%02d"|format((resto / 60)|round(0, "floor")) }}{% set resto = resto - ((resto / 60)|round(0, "floor") * 60) %}:{{ "%06.3f"|format(resto) }}
                      {% elseif ron.unidades == "metros" %}{{ ron.marca|number_format(3, ',', '.') }} m.
                      {% elseif ron.unidades == "puntosdesc" %}{{ ron.marca|number_format(0, ',', '.') }} ptos.
                      {% elseif ron.unidades == "puntosasc" %}{{ ron.marca|number_format(0, ',', '.') }} ptos.
