Navegacion a pantalla de records

--- a/src/Easanles/AtletismoBundle/Resources/views/Intento/pant_intento.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Intento/pant_intento.html.twig
@@ -16,8 +16,8 @@
       <li class="dropdown">
          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Records <span class="caret"></span></a>
          <ul class="dropdown-menu">
-            <li><a class="inactive" href="#">Records masculinos</a></li>
-            <li><a class="inactive" href="#">Records femeninos</a></li>
+            <li><a href="{{ path('pantalla_records_masc') }}">Records masculinos</a></li>
+            <li><a href="{{ path('pantalla_records_fem') }}">Records femeninos</a></li>
          </ul>
       </li>
       <li class="dropdown">
