--- a/src/Easanles/AtletismoBundle/Resources/views/Default/index.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Default/index.html.twig
@@ -15,7 +15,6 @@
 {% endblock%}
 
 {% block body %}
-{# Mostrar contenido de una variable {{ dump() }} #}
 
 <div class="modal fade" id="modalDialog" tabindex="-1" role="dialog" aria-labelledby="modalLabel">
   <div class="modal-dialog" role="document">
@@ -55,8 +54,8 @@
                <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Records <span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                     <li><a class="inactive" href="#">Records masculinos</a></li>
-                     <li><a class="inactive" href="#">Records femeninos</a></li>
+                     <li><a href="{{ path('pantalla_records_masc') }}">Records masculinos</a></li>
+                     <li><a href="{{ path('pantalla_records_fem') }}">Records femeninos</a></li>
                   </ul>
                </li>
                <li class="dropdown">
